--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,23 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.body {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  width: 100%;
+  padding: 0 32px;
+}
+
+.main-nav {
+  width: 280px;
+  transform: translateX(0);
+  transition: transform .25s cubic-bezier(0.4,0.0,0.2,1);
+}
+
+.main-nav .list-group {
+  border-bottom: 1px solid #ddd;
+}
+
+.main-nav .list-group-item {
+  border: none
 }
